Update B (2021-05-20) minor changes

--- a/PegasusPlus/PegasusPlus.csproj
+++ b/PegasusPlus/PegasusPlus.csproj
@@ -598,6 +598,12 @@
     <Compile Include="Reports\Statistics\statGenders.Designer.cs">
       <DependentUpon>statGenders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reports\Statistics\statPtyxioLevel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\Statistics\statPtyxioLevel.Designer.cs">
+      <DependentUpon>statPtyxioLevel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reports\Statistics\statSocialGroups.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -1714,6 +1720,8 @@
     <Content Include="Views\School\statCertifiedPrint.cshtml" />
     <Content Include="Views\School\statGendersPrint.cshtml" />
     <Content Include="Views\School\statSocialGroupsPrint.cshtml" />
+    <Content Include="Views\Admin\statPtyxioLevelPrint.cshtml" />
+    <Content Include="Views\School\statPtyxioLevelPrint.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Site.css" />
@@ -1819,6 +1827,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Statistics\statGenders.resx">
       <DependentUpon>statGenders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Statistics\statPtyxioLevel.resx">
+      <DependentUpon>statPtyxioLevel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Statistics\statSocialGroups.resx">
       <DependentUpon>statSocialGroups.cs</DependentUpon>
