--- a/PegasusPlus/PegasusPlus.csproj
+++ b/PegasusPlus/PegasusPlus.csproj
@@ -1722,6 +1722,7 @@
     <Content Include="Views\School\statSocialGroupsPrint.cshtml" />
     <Content Include="Views\Admin\statPtyxioLevelPrint.cshtml" />
     <Content Include="Views\School\statPtyxioLevelPrint.cshtml" />
+    <Content Include="Views\School\AitisiSchools.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Site.css" />
@@ -1729,7 +1730,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Reports\Pinakes\" />
+    <Folder Include="Reports\PinakesExternal\" />
+    <Folder Include="Reports\PinakesInternal\" />
     <Folder Include="Uploads\Enstaseis\" />
     <Folder Include="Uploads\FilesEpimorfosi\" />
     <Folder Include="Uploads\FilesExperience\" />
