--- a/PegasusPlus/bin/PegasusPlus.dll.config
+++ b/PegasusPlus/bin/PegasusPlus.dll.config
@@ -30,7 +30,8 @@
   </system.web.extensions>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="1073741824" executionTimeout="3600"/>
+    <!-- maxRequestLength in KB, set to 2GB -->
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="2097152" executionTimeout="3600"/>
     <!-- Required, otherwise does not authenticate -->
     <authentication mode="Forms">
       <forms name="login" cookieless="UseCookies" protection="All" />
@@ -98,7 +99,8 @@
     </handlers>
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="1073741824" maxQueryString="65536" />
+        <!-- maxAllowedContentLength in Bytes, set to 2GB -->
+        <requestLimits maxAllowedContentLength="2147483648" maxQueryString="65536" />
       </requestFiltering>
     </security>
   </system.webServer>
